todo-do288/labs/create-template/orig-dumps/route.yaml
apiVersion: v1
items:
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: "2019-11-08T11:59:29Z"
    labels:
      app: quotesapi
    name: quotesapi
    namespace: albert-blazek-bertelsmann-de-quotes-dev
    resourceVersion: "37194692"
    selfLink: /apis/route.openshift.io/v1/namespaces/albert-blazek-bertelsmann-de-quotes-dev/routes/quotesapi
    uid: 3838b0c6-021f-11ea-8aa2-0a580a820088
  spec:
    host: quotesapi-albert-blazek-bertelsmann-de-quotes-dev.apps.ocp-eu1.prod.nextcle.com
    port:
      targetPort: 8080-tcp
    subdomain: ""
    to:
      kind: Service
      name: quotesapi
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2019-11-08T11:59:29Z"
        status: "True"
        type: Admitted
      host: quotesapi-albert-blazek-bertelsmann-de-quotes-dev.apps.ocp-eu1.prod.nextcle.com
      routerCanonicalHostname: apps.ocp-eu1.prod.nextcle.com
      routerName: default
      wildcardPolicy: None
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
