todo-do288/labs/create-template/orig-dumps/svc.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: "2019-11-08T11:56:39Z"
    labels:
      app: quotesapi
    name: quotesapi
    namespace: albert-blazek-bertelsmann-de-quotes-dev
    resourceVersion: "37193207"
    selfLink: /api/v1/namespaces/albert-blazek-bertelsmann-de-quotes-dev/services/quotesapi
    uid: d2e51ed3-021e-11ea-ba65-02dc6244afea
  spec:
    clusterIP: 172.30.204.127
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: 8443-tcp
      port: 8443
      protocol: TCP
      targetPort: 8443
    selector:
      app: quotesapi
      deploymentconfig: quotesapi
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: "2019-11-08T11:55:59Z"
    labels:
      app: quotesdb
    name: quotesdb
    namespace: albert-blazek-bertelsmann-de-quotes-dev
    resourceVersion: "37192807"
    selfLink: /api/v1/namespaces/albert-blazek-bertelsmann-de-quotes-dev/services/quotesdb
    uid: bac76e8c-021e-11ea-97a3-0ace8eb917f6
  spec:
    clusterIP: 172.30.169.228
    ports:
    - name: 3306-tcp
      port: 3306
      protocol: TCP
      targetPort: 3306
    selector:
      app: quotesdb
      deploymentconfig: quotesdb
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
